external-projects/sui-prover/crates/sui-prover/tests/snapshots/quantifiers/any_all_range.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/any_all_range.fail.move:40:5
   │
40 │     ensures(all_range!<u64>(&v, 1, 3, |x| x_is_greater_than_15(x))); // FAIL: should be false
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/any_all_range.fail.move:36: test_all_range_wrong

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/any_all_range.fail.move:31:5
   │
31 │     ensures(any_range!<u64>(&v, 1, 2, |x| x_is_10(x))); // FAIL: should be false
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/any_all_range.fail.move:27: test_any_range_wrong
